log

Thu 17 Aug 2023 08:12:23 PM UTC: 
 tests:  0|7
total_score: 0/70
6269d63
Thu 17 Aug 2023 08:16:30 PM UTC: 
 exercises.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 56 insertions(+), 6 deletions(-)
 tests:  0|3
total_score: 40/70
a5d08b4
Thu 17 Aug 2023 08:41:06 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
125bd66
